Add lint tools: initial commit

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,17 +1,15 @@
 [defaults]
-roles_path = /home/vagrant:/home/vagrant/.roles
-allow_world_readable_tmpfiles = True
-
 remote_user = ansible
 remote_tmp = /tmp
 private_key_file = ~/.ssh/id_rsa
 timeout = 30
-host_key_checking = False
-inventory = ~/ansible-role-postgresql-ha/inventory
+host_key_checking = false
+inventory = ./inventory
 interpreter_python = /usr/bin/python
 callback_whitelist = profile_tasks, timer
 ansible_managed = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}. Any changes might be lost.
+allow_world_readable_tmpfiles = true
 
 [ssh_connection]
-pipelining = True
+pipelining = true
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes
