--- a/defaults/repmgr.yml
+++ b/defaults/repmgr.yml
@@ -1,38 +1,39 @@
+---
 # Required configuration items
 repmgr_target_group: ""
-repmgr_user: "repmgr"
-repmgr_password: "repmgr"
-repmgr_database: "repmgr"
-repmgr_conninfo: "host={{ansible_hostname}} user={{repmgr_user}} dbname={{repmgr_database}} connect_timeout=2"
-repmgr_data_directory: "{{postgresql_data_directory}}"
+repmgr_user: repmgr
+repmgr_password: repmgr
+repmgr_database: repmgr
+repmgr_conninfo: "host={{ ansible_hostname }} user={{ repmgr_user }} dbname={{ repmgr_database }} connect_timeout=2"
+repmgr_data_directory: "{{ postgresql_data_directory }}"
 repmgr_version: "4.2"
 
 # Optional configuration items
 #
 
 # Repositories
-repmgr_gpg_key_url: "https://dl.2ndquadrant.com/gpg-key.asc"
+repmgr_gpg_key_url: https://dl.2ndquadrant.com/gpg-key.asc
 repmgr_apt_repository: "deb [arch=amd64] https://dl.2ndquadrant.com/default/release/apt {{ ansible_distribution_release }}-2ndquadrant main"
 
 # Replication
-repmgr_primary: False
-repmgr_config_directory: "{{postgresql_conf_directory}}"
-repmgr_replication_user: "{{repmgr_user}}"
-repmgr_replication_type: "physical"
-repmgr_location: "default"
+repmgr_primary: false
+repmgr_config_directory: "{{ postgresql_conf_directory }}"
+repmgr_replication_user: "{{ repmgr_user }}"
+repmgr_replication_type: physical
+repmgr_location: default
 repmgr_use_replication_slots: "no"
 repmgr_witness_sync_interval: 15
 repmgr_use_primary_conninfo_password: "false"
-repmgr_passfile: "/var/lib/postgresql/.pgpass"
-repmgr_base_key_path: "/var/lib/postgresql/.ssh"
-repmgr_private_key_path: "/var/lib/postgresql/.ssh/id_rsa"
-repmgr_public_key_path: "/var/lib/postgresql/.ssh/id_rsa.pub"
-repmgr_ssh_key_bits: "2048"
-repmgr_ssh_key_type: "rsa"
+repmgr_passfile: /var/lib/postgresql/.pgpass
+repmgr_base_key_path: /var/lib/postgresql/.ssh
+repmgr_private_key_path: /var/lib/postgresql/.ssh/id_rsa
+repmgr_public_key_path: /var/lib/postgresql/.ssh/id_rsa.pub
+repmgr_ssh_key_bits: 2048
+repmgr_ssh_key_type: rsa
 
 # Logging
-repmgr_log_level: "INFO"
-repmgr_log_facility: "STDERR"
+repmgr_log_level: INFO
+repmgr_log_facility: STDERR
 repmgr_log_file: ""
 repmgr_log_status_interval: 300
 
@@ -41,8 +42,8 @@ repmgr_event_notification_command: ""
 repmgr_event_notifications: ""
 
 # Directories
-repmgr_pg_bindir: "{{postgresql_bin_directory}}"
-repmgr_repmgr_bindir: "{{postgresql_bin_directory}}"
+repmgr_pg_bindir: "{{ postgresql_bin_directory }}"
+repmgr_repmgr_bindir: "{{ postgresql_bin_directory }}"
 
 # Commands & options
 repmgr_pg_ctl_options: ""
@@ -87,11 +88,11 @@ repmgr_async_query_timeout: 60
 repmgr_keep_history_days: 14
 
 # Service commands
-repmgr_service_start_command :  "sudo systemctl start postgresql-{{postgresql_version}}"
-repmgr_service_stop_command :  "sudo systemctl stop postgresql-{{postgresql_version}}"
-repmgr_service_restart_command :  "sudo systemctl restart postgresql-{{postgresql_version}}"
-repmgr_service_reload_command :  "sudo systemctl reload postgresql-{{postgresql_version}}"
-repmgr_service_promote_command :  ""
+repmgr_service_start_command: "sudo systemctl start postgresql-{{ postgresql_version }}"
+repmgr_service_stop_command: "sudo systemctl stop postgresql-{{ postgresql_version }}"
+repmgr_service_restart_command: "sudo systemctl restart postgresql-{{ postgresql_version }}"
+repmgr_service_reload_command: "sudo systemctl reload postgresql-{{ postgresql_version }}"
+repmgr_service_promote_command: ""
 
 # Warning levels
 repmgr_archive_ready_warning: 16
