--- a/site.yml
+++ b/site.yml
@@ -1,11 +1,14 @@
 ---
-- hosts: all
-  gather_facts: true
+- hosts: pgcluster
+  gather_facts: yes
   become: yes
   debugger: on_failed
+
   vars_files:
     - ./vars.yml
-    - ./vars/Debian.yml
     - ./vars/postgresql_11.yml
+  vars:
+    role_path: "{{ lookup('env', 'ROLE_PATH') }}"
+
   roles:
-    - ansible-role-postgresql-ha
+    - name: "{{ role_path if role_path is defined and role_path else lookup('env', 'HOME') + '/ansible-role-postgresql-ha' }}"
