--- a/tasks/check_pg_version_mismatch.yml
+++ b/tasks/check_pg_version_mismatch.yml
@@ -1,8 +1,11 @@
 ---
 # Check binary version
 - name: PostgreSQL | Check binary version
-  shell: >
-    psql --version | sed 's/^psql (//' | sed 's/)//' | awk '{print $1, $2}'
+  shell:
+    cmd: |
+      set -o pipefail
+      psql --version | sed 's/^psql (//' | sed 's/)//' | awk '{print $1, $2}'
+    executable: /bin/bash
   become: yes
   become_user: "{{ postgresql_service_user }}"
   changed_when: false
@@ -12,8 +15,11 @@
 
 # Check database version
 - name: PostgreSQL | Check database version
-  shell: >
-    psql --quiet --tuples-only --port={{ postgresql_port | int }} --command="select substring(version(),'[^\s]+\s+[^\s]+');" | sed 's/^ //'
+  shell:
+    cmd: |
+      set -o pipefail
+      psql --quiet --tuples-only --port={{ postgresql_port | int }} --command="select substring(version(),'[^\s]+\s+[^\s]+');" | sed 's/^ //'
+    executable: /bin/bash
   become: yes
   become_user: "{{ postgresql_service_user }}"
   changed_when: false
