--- a/tasks/extensions/postgis.yml
+++ b/tasks/extensions/postgis.yml
@@ -3,12 +3,13 @@
   with_first_found:
     - "../vars/{{ ansible_distribution_release }}.yml"
     - "../vars/empty.yml"
+  tags: skip_ansible_lint
 
 - name: PostgreSQL | Extensions | Make sure the postgis extensions are installed | Debian
   apt:
     name: "{{ postgresql_ext_postgis_deps }}"
     state: present
     update_cache: yes
-    cache_valid_time: "{{apt_cache_valid_time | default (3600)}}"
+    cache_valid_time: "{{ apt_cache_valid_time | default (3600) }}"
   when: ansible_os_family == "Debian"
   notify: restart postgresql
