--- a/site.yml
+++ b/site.yml
@@ -3,12 +3,78 @@
   gather_facts: yes
   become: yes
   debugger: on_failed
-
-  vars_files:
-    - ./vars.yml
-    - ./vars/postgresql_11.yml
   vars:
     role_path: "{{ lookup('env', 'ROLE_PATH') }}"
-
+  pre_tasks:
+    - name: Debug variables
+      debug:
+        msg:
+          "repmgr_gpg_key_url": "{{ repmgr_gpg_key_url }}"
+          "repmgr_apt_repository": "{{ repmgr_apt_repository }}"
+          "repmgr_target_group": "{{ repmgr_target_group }}"
+          "repmgr_target_group_hosts": "{{ repmgr_target_group_hosts }}"
+          "repmgr_master": "{{ repmgr_master }}"
   roles:
     - name: "{{ role_path if role_path is defined and role_path else lookup('env', 'HOME') + '/ansible-role-postgresql-ha' }}"
+      vars:
+        # Basic settings
+        postgresql_version: 11
+        postgresql_cluster_name: main
+        postgresql_cluster_reset: false # TODO: Needs to be tested for repmgr
+        postgresql_port: 5432
+        postgresql_encoding: "UTF-8"
+        postgresql_locale: "fr_FR.UTF-8"
+        postgresql_ctype: "fr_FR.UTF-8"
+        postgresql_admin_user: "postgres"
+        postgresql_default_auth_method: "peer"
+        postgresql_listen_addresses: "*"
+        postgresql_wal_level: "replica"
+        postgresql_max_wal_senders: 10
+        postgresql_max_replication_slots: 10
+        postgresql_wal_keep_segments: 100
+        postgresql_hot_standby: on
+        postgresql_archive_mode: on
+        postgresql_archive_command: "test ! -f /tmp/%f && cp %p /tmp/%f"
+        postgresql_ext_install_repmgr: yes
+        postgresql_shared_preload_libraries:
+          - repmgr
+        # postgresql logging 
+        postgresql_log_checkpoints: on
+        postgresql_log_connections: on
+        postgresql_log_disconnections: on
+        postgresql_log_temp_files: 0
+        # pg_hba.conf
+        postgresql_pg_hba_custom:
+          - { type: "host", database: "all", user: "all", address: "192.168.56.0/24", method: "md5" }
+          - { type: "host", database: "replication", user: "{{ repmgr_user }}", address: "192.168.56.0/24", method: "trust" }  
+          - { type: "host", database: "replication", user: "{{ repmgr_user }}", address: "127.0.0.1/32", method: "trust" }  
+          - { type: "host", database: "{{ repmgr_database }}", user: "{{ repmgr_user }}", address: "127.0.0.1/32", method: "trust" }  
+          - { type: "host", database: "{{ repmgr_database }}", user: "{{ repmgr_user }}", address: "192.168.56.0/32", method: "trust" }  
+        # Databases
+        postgresql_databases:
+          - name: testdb
+            owner: admin
+            encoding: "UTF-8"
+          - name: "{{ repmgr_database }}"
+            owner: "{{ repmgr_user }}"
+            encoding: "UTF-8"
+        # Users
+        postgresql_users:
+          - name: admin
+            pass: secret # postgresql >=10 does not accept unencrypted passwords
+            encrypted: yes
+          - name: "{{ repmgr_user }}"
+            pass: "{{ repmgr_password }}"
+        # Roles
+        postgresql_user_privileges:
+          - name: admin
+            db: testdb
+            role_attr_flags: "SUPERUSER"
+          - name: "{{ repmgr_user }}"
+            db: "{{ repmgr_database }}"
+            priv: "ALL"
+            role_attr_flags: "SUPERUSER,REPLICATION"
+        # Required configuration items
+        repmgr_target_group: "pgcluster"
+        repmgr_target_group_hosts: "{{ groups[repmgr_target_group] }}"
+        repmgr_master: "pgsql01"
