--- a/defaults/main/002-repmgr.yml
+++ b/defaults/main/002-repmgr.yml
@@ -73,6 +73,7 @@ repmgr_repmgrd_pid_file: ""
 # Fail-over
 repmgr_failover: "manual"
 repmgr_priority: 100
+repmgr_connection_check_type: ping # Accepted: ping, connection, query
 repmgr_reconnect_attempts: 6
 repmgr_reconnect_interval: 10
 repmgr_promote_command: ""
@@ -85,7 +86,18 @@ repmgr_monitoring_history: "no"
 repmgr_monitor_interval_secs: 2
 repmgr_degraded_monitoring_timeout: -1
 repmgr_async_query_timeout: 60
-repmgr_keep_history_days: 14
+
+# Advanced failover parameters (new in version 5.x)
+repmgr_standby_disconnect_on_failover: "false"
+repmgr_sibling_nodes_disconnect_timeout: 30
+repmgr_primary_visibility_consensus: "false"
+repmgr_failover_validation_command: ''
+repmgr_election_rerun_interval: 15
+repmgr_child_nodes_check_interval: 5
+repmgr_child_nodes_connected_min_count: -1
+repmgr_child_nodes_disconnect_min_count: -1
+repmgr_child_nodes_disconnect_timeout: 30
+repmgr_child_nodes_disconnect_command: ''
 
 # Service commands
 repmgr_service_start_command: "sudo systemctl start postgresql-{{ postgresql_version }}"
