--- a/vars/postgresql_12.yml
+++ b/vars/postgresql_12.yml
@@ -1,4 +1,3 @@
 ---
 # PostgreSQL vars for v12
-
-# None yet. Add them here if needed.
+postgresql_stats_temp_directory: /var/run/postgresql/{{ postgresql_version }}-{{ postgresql_cluster_name }}.pg_stat_tmp/
