--- a/site.yml
+++ b/site.yml
@@ -9,11 +9,12 @@
     - name: Debug variables
       debug:
         msg:
-          "repmgr_gpg_key_url": "{{ repmgr_gpg_key_url }}"
-          "repmgr_apt_repository": "{{ repmgr_apt_repository }}"
-          "repmgr_target_group": "{{ repmgr_target_group }}"
-          "repmgr_target_group_hosts": "{{ repmgr_target_group_hosts }}"
-          "repmgr_master": "{{ repmgr_master }}"
+        "postgresql_version": "{{ postgresql_version }}"
+        "repmgr_master": "{{ repmgr_master }}"
+        "repmgr_gpg_key_url": "{{ repmgr_gpg_key_url }}"
+        "repmgr_apt_repository": "{{ repmgr_apt_repository }}"
+        "repmgr_target_group": "{{ repmgr_target_group }}"
+        "repmgr_node_id": "{{ repmgr_node_id }}"
   roles:
     - name: "{{ role_path if role_path is defined and role_path else lookup('env', 'HOME') + '/ansible-role-postgresql-ha' }}"
       vars:
@@ -76,5 +77,4 @@
             role_attr_flags: "SUPERUSER,REPLICATION"
         # Required configuration items
         repmgr_target_group: "pgcluster"
-        repmgr_target_group_hosts: "{{ groups[repmgr_target_group] }}"
         repmgr_master: "pgsql01"
