--- a/tasks/extensions/detect_repmgr_primary.yml
+++ b/tasks/extensions/detect_repmgr_primary.yml
@@ -1,4 +1,8 @@
 ---
+- name: Repmgr | Get hosts from targeted group
+  set_fact:
+    repmgr_target_group_hosts: "{{ groups[repmgr_target_group] }}"
+
 - name: Repmgr | Detect primary
   shell: "{{ postgresql_bin_directory }}/repmgr -f {{ postgresql_conf_directory }}/repmgr.conf cluster show | grep primary | cut -d '|' -f 2"
   register: repmgr_primary_check
