--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -16,6 +16,7 @@
         name: 
           - python3-apt
           - python3-pip
+          - libpq-dev # required for psycog2
         update_cache: yes
 
     - name: Use python3 by default
