Refactoring: migrate to pg_ctlcluster from systemd based on repmgr documentation recommendations

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -53,6 +53,7 @@ provisioner:
     group_vars:
       pgcluster: 
         postgresql_version: 11
+        postgresql_port: 5432
         repmgr_master: pgsql01
         repmgr_target_group: pgcluster
         postgresql_service_user: postgres
