--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,9 +1,7 @@
 ---
 - name: restart postgresql
-  service:
-    name: "{{ postgresql_service_name }}"
-    state: restarted
-    enabled: yes
-
-- name: restart cluster
-  shell: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} restart
+  shell: 
+    cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} restart
+    executable: /bin/bash
+  become: yes
+  become_user: "{{ postgresql_service_user }}"
