--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -10,14 +10,54 @@
           repmgr cluster crosscheck
         executable: /bin/bash
       become_user: "{{ postgresql_service_user }}"
-      register: crosscheck
+      register: cluster_crosscheck
 
     - name: Print result
       debug:
         msg:
-          "crosscheck": "{{ crosscheck.stdout_lines }}"
+          "cluster_crosscheck": "{{ cluster_crosscheck.stdout_lines }}"
 
     - name: Ensure testdb is created
       shell:
         cmd: psql -c '\l testdb' # returns 0 if exists
       become_user: "{{ postgresql_service_user }}"
+
+    - name: Perform manuel failover check
+      shell:
+        cmd: |
+          repmgr standby switchover --siblings-follow --dry-run
+        executable: /bin/bash
+      become_user: "{{ postgresql_service_user }}"
+      when: ansible_hostname == 'pgsql02'
+      register: repmgr_switchover_check
+      failed_when: repmgr_switchover_check.rc not in [130]
+
+    - name: Print result
+      debug:
+        msg:
+          "repmgr_switchover_check": "repmgr_switchover_check.stderr_lines"
+
+    - name: Perform actual manual switchover
+      shell:
+        cmd: |
+          repmgr standby switchover --siblings-follow
+        executable: /bin/bash
+      become_user: "{{ postgresql_service_user }}"
+      when: ansible_hostname == 'pgsql02'
+
+    - name: Wait for pgsql service
+      wait_for:
+        port: "{{ postgresql_port }}"
+
+    - name: Show cluster status
+      shell:
+        cmd: |
+          repmgr cluster show
+        executable: /bin/bash
+      become_user: "{{ postgresql_service_user }}"
+      register: cluster_status
+
+    - name: Print result
+      debug:
+        msg:
+          "cluster_status": "{{ cluster_status.stdout_lines }}"
