--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -39,10 +39,10 @@
   when: ansible_os_family == "Debian" and item != "C.UTF-8"
 
 - name: PostgreSQL | Stop PostgreSQL | Debian
-  service:
-    name: "{{ postgresql_service_name }}"
-    state: stopped
-  become: yes
+  shell: 
+    cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} stop
+    executable: /bin/bash
+  become_user: "{{ postgresql_service_user }}"
   when: ansible_os_family == "Debian" and postgresql_cluster_reset and pgdata_dir_exist.changed
 
 - name: PostgreSQL | Reset the cluster - drop the existing one | Debian
@@ -65,16 +65,12 @@
   become_user: "{{ postgresql_service_user }}"
   when: ansible_os_family == "Debian" and postgresql_cluster_reset and pgdata_dir_exist.changed
 
-- name: PostgreSQL | Update systemd | Debian
-  command: systemctl daemon-reload
-  become: yes
-  when: ansible_os_family == "Debian" and postgresql_cluster_reset and pgdata_dir_exist.changed
-
 - name: PostgreSQL | Start PostgreSQL | Debian
-  service:
-    name: "{{ postgresql_service_name }}"
-    state: started
-  become: yes
+  shell: 
+    cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} start
+    executable: /bin/bash
+  become_user: "{{ postgresql_service_user }}"
+
   when: ansible_os_family == "Debian" and postgresql_cluster_reset and pgdata_dir_exist.changed
 
 - name: PostgreSQL | Verify postgresql cluster version
@@ -167,13 +163,16 @@
   notify: restart postgresql
 
 - name: PostgreSQL | Reload all conf files
-  service:
-    name: "{{ postgresql_service_name }}"
-    state: reloaded
+  shell: 
+    cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} reload
+    executable: /bin/bash
+  become_user: "{{ postgresql_service_user }}"
   when: postgresql_configuration_pt1.changed or postgresql_configuration_pt2.changed or postgresql_configuration_pt3.changed or postgresql_systemd_custom_conf.changed
 
 - name: PostgreSQL | Restart service
-  service:
-    name: "{{ postgresql_service_name }}"
-    state: restarted
+  shell: 
+    cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} restart
+    executable: /bin/bash
+  become: yes
+  become_user: "{{ postgresql_service_user }}"
   when: postgresql_configuration_pt2.changed
