--- a/tasks/extensions/configure_repmgr.yml
+++ b/tasks/extensions/configure_repmgr.yml
@@ -91,9 +91,11 @@
   when: ansible_hostname == repmgr_primary_hostname
 
 - name: Repmgr | Ensure postgresql slave is stopped before clone
-  service:
-    name: "postgresql@{{ postgresql_version }}-{{ postgresql_cluster_name }}"
-    state: stopped
+  shell: 
+    cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} stop
+    executable: /bin/bash
+  become: yes
+  become_user: "{{ postgresql_service_user }}"
   when: ansible_hostname != repmgr_primary_hostname
 
 - name: Repmgr | Clone standby
@@ -103,9 +105,11 @@
   when: ansible_hostname != repmgr_primary_hostname
 
 - name: Repmgr | Ensure postgresql slave is running after clone
-  service:
-    name: "postgresql@{{ postgresql_version }}-{{ postgresql_cluster_name }}"
-    state: started
+  shell: 
+    cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} start
+    executable: /bin/bash
+  become: yes
+  become_user: "{{ postgresql_service_user }}"
   when: ansible_hostname != repmgr_primary_hostname
 
 - name: Repmgr | Wait for Postgres
@@ -126,7 +130,7 @@
 
 - name: Repmgr | Ensure repmgrd is running
   service:
-    name: "repmgrd"
+    name: repmgrd
     state: started
     enabled: yes
   when: repmgr_monitoring_history == "true" or repmgr_failover == "automatic"
