--- a/site.yml
+++ b/site.yml
@@ -39,17 +39,21 @@
   roles:
     - name: "{{ role_path if role_path is defined and role_path else lookup('env', 'HOME') + '/ansible-role-postgresql-ha' }}"
       vars:
+        # Required configuration items
+        repmgr_target_group: pgcluster
+        repmgr_master: pgsql01
+        repmgr_failover: automatic
+        repmgr_promote_command: /usr/bin/repmgr standby promote --siblings-follow --log-to-file
+        repmgr_follow_command: /usr/bin/repmgr standby follow -W --upstream-node-id=%n --log-to-file
+        repmgr_monitoring_history: "yes"
+        repmgr_log_level: DEBUG
+        repmgr_connection_check_type: query
         # Basic settings
         postgresql_version: 11
         postgresql_cluster_name: main
         postgresql_cluster_reset: false # TODO: Needs to be tested for repmgr
-        postgresql_port: 5432
-        postgresql_encoding: "UTF-8"
-        postgresql_locale: "fr_FR.UTF-8"
-        postgresql_ctype: "fr_FR.UTF-8"
-        postgresql_admin_user: "postgres"
-        postgresql_default_auth_method: "peer"
         postgresql_listen_addresses: "*"
+        postgresql_port: 5432
         postgresql_wal_level: "replica"
         postgresql_max_wal_senders: 10
         postgresql_max_replication_slots: 10
@@ -96,6 +100,3 @@
           - name: admin
             db: testdb
             role_attr_flags: "SUPERUSER"
-        # Required configuration items
-        repmgr_target_group: "pgcluster"
-        repmgr_master: "pgsql01"
