--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -70,7 +70,6 @@
     cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} start
     executable: /bin/bash
   become_user: "{{ postgresql_service_user }}"
-
   when: ansible_os_family == "Debian" and postgresql_cluster_reset and pgdata_dir_exist.changed
 
 - name: PostgreSQL | Verify postgresql cluster version
@@ -173,6 +172,7 @@
   shell: 
     cmd: pg_ctlcluster {{ postgresql_version }} {{ postgresql_cluster_name }} restart
     executable: /bin/bash
-  become: yes
   become_user: "{{ postgresql_service_user }}"
   when: postgresql_configuration_pt2.changed
+  register: postgresql_restart
+  failed_when: postgresql_restart.rc not in [0, 2] # handle already-running return codes
