--- a/vars/postgresql_11.yml
+++ b/vars/postgresql_11.yml
@@ -1,5 +1,5 @@
 ---
 # PostgreSQL vars for v11
-
+postgresql_stats_temp_directory: /var/run/postgresql/{{ postgresql_version }}-{{ postgresql_cluster_name }}.pg_stat_tmp/
 postgresql_jit: off
 postgresql_autovacuum_vacuum_cost_delay: 20ms
