--- a/defaults/main/001-postgresql.yml
+++ b/defaults/main/001-postgresql.yml
@@ -800,4 +800,4 @@ postgresql_apt_repository: "deb http://apt.postgresql.org/pub/repos/apt/ {{ ansi
 postgresql_apt_pin_priority: 500
 postgresql_apt_py3_dependencies: ["python3-psycopg2", "locales"]
 postgresql_apt_py2_dependencies: ["python-psycopg2", "python-pycurl", "locales"]
-postgresql_apt_dependencies: "{{ postgresql_apt_py3_dependencies if 'python3' in ansible_python_interpreter|default('') else postgresql_apt_py2_dependencies }}"
+postgresql_apt_dependencies: "{{ postgresql_apt_py3_dependencies if ansible_python_version is version('3', '>=') else postgresql_apt_py2_dependencies }}"
