--- a/defaults/main/001-postgresql.yml
+++ b/defaults/main/001-postgresql.yml
@@ -798,6 +798,10 @@ postgresql_apt_key_url: "https://www.postgresql.org/media/keys/ACCC4CF8.asc"
 postgresql_apt_repository: "deb http://apt.postgresql.org/pub/repos/apt/ {{ ansible_distribution_release }}-pgdg main {{ postgresql_version }}"
 # Pin-Priority of PGDG repository
 postgresql_apt_pin_priority: 500
-postgresql_apt_py3_dependencies: ["python3-psycopg2", "locales"]
-postgresql_apt_py2_dependencies: ["python-psycopg2", "python-pycurl", "locales"]
+postgresql_apt_py3_dependencies: ["libpq-dev", "python3-psycopg2", "locales"]
+postgresql_apt_py2_dependencies: ["libpq-dev", "python-psycopg2", "python-pycurl", "locales"]
 postgresql_apt_dependencies: "{{ postgresql_apt_py3_dependencies if ansible_python_version is version('3', '>=') else postgresql_apt_py2_dependencies }}"
+
+postgresql_bin_directory: /usr/bin
+postgresql_fdw_mysql_packages: "postgresql-{{ postgresql_version }}-mysql-fdw"
+postgresql_fdw_ogr_packages: "postgresql-{{ postgresql_version }}-ogr-fdw"
