--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - include_vars: "{{ item }}"
   with_first_found:
-    - "../vars/{{ ansible_os_family }}.yml"
+    - "../vars/{{ ansible_distribution_release }}.yml"
     - "../vars/empty.yml"
   tags: [always]
 
