--- a/automatic-failover-example.yml
+++ b/automatic-failover-example.yml
@@ -4,6 +4,7 @@
   become: yes
   debugger: on_failed
   vars:
+    ansible_python_interpreter: /usr/bin/python3
     role_path: "{{ lookup('env', 'ROLE_PATH') }}"
   pre_tasks:
     - name: Install python dependencies
@@ -20,6 +21,8 @@
     - name: Debug variables
       debug:
         msg:
+          "ansible_python_interpreter": "{{ ansible_python_interpreter }}"
+          "ansible_python_version": "{{ ansible_python_version }}"
           "postgresql_version": "{{ postgresql_version }}"
           "repmgr_master": "{{ repmgr_master }}"
           "repmgr_target_group": "{{ repmgr_target_group }}"
