Switch to YAML-based inventory file

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,10 +4,10 @@ remote_tmp = /tmp
 private_key_file = ~/.ssh/id_rsa
 timeout = 30
 host_key_checking = false
-inventory = ./inventory
-interpreter_python = /usr/bin/python
+inventory = ./inventory.yml
+interpreter_python = /usr/bin/python3
+roles_path = ~/.ansible:~/:/etc/ansible/roles 
 callback_whitelist = profile_tasks, timer
-ansible_managed = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}. Any changes might be lost.
 allow_world_readable_tmpfiles = true
 
 [ssh_connection]
