--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -96,45 +96,14 @@
 - name: PostgreSQL | Update configuration - pt. 2 (postgresql.conf)
   template:
     src: "postgresql.conf-{{ postgresql_version }}.j2"
-    # if using pgtune, save the template to ".untuned"
-    dest: "{{ postgresql_conf_directory }}/postgresql.conf{% if postgresql_pgtune %}.untuned{% endif %}"
+    dest: "{{ postgresql_conf_directory }}/postgresql.conf"
     owner: "{{ postgresql_service_user }}"
     group: "{{ postgresql_service_group }}"
     mode: 0640
   register: postgresql_configuration_pt2
   changed_when: true
 
-- name: PostgreSQL | Update configuration - pt. 3 (pgtune)
-  become: true
-  become_user: "{{ postgresql_service_user }}"
-  shell: |
-    set -e
-    TMPDIR=$(mktemp -d)
-    pgtune --input-config=postgresql.conf.untuned\
-           --output-config=$TMPDIR/postgresql.conf\
-           {% if postgresql_pgtune_memory %}--memory {{ postgresql_pgtune_memory|int }}{% endif %}\
-           --type {{ postgresql_pgtune_type|quote }}\
-           {% if postgresql_pgtune_connections %}--connections {{ postgresql_pgtune_connections|int }}{% endif %}\
-    # Compare the current config with the one procuded by pgtune (ignoring comments/blanks)
-    if diff --ignore-blank-lines \
-        <(sed -e 's/#.*//' postgresql.conf) \
-        <(sed -e 's/#.*//' $TMPDIR/postgresql.conf)
-    then
-      echo '_OK_'
-    else
-      cp $TMPDIR/postgresql.conf postgresql.conf
-    fi
-    # Cleanup
-    rm $TMPDIR/postgresql.conf
-    rmdir $TMPDIR
-  args:
-    chdir: "{{ postgresql_conf_directory }}"
-    executable: "/bin/bash"
-  when: postgresql_pgtune
-  register: postgresql_configuration_pt3
-  changed_when: "'_OK_' not in postgresql_configuration_pt3.stdout"
-
-- name: PostgreSQL | Update configuration - pt. 4 (pg_ident.conf)
+- name: PostgreSQL | Update configuration - pt. 3 (pg_ident.conf)
   template:
     src: pg_ident.conf.j2
     dest: "{{ postgresql_ident_file }}"
